--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,8 @@ variables:
   imagePullSecret: 'myacrpipelinesjs20250109220050c9-auth'
 
   # Agent VM image name
-  vmImageName: 'ubuntu-latest'
+  # vmImageName: 'ubuntu-latest'
+  agentPoolName: 'Default'
 
   # Name of the new namespace being created to deploy the PR changes.
   k8sNamespaceForPR: 'review-app-$(System.PullRequest.PullRequestId)'
@@ -31,7 +32,8 @@ stages:
   - job: Build
     displayName: Build
     pool:
-      vmImage: $(vmImageName)
+      #vmImage: $(vmImageName)
+      name: $(agentPoolName)
     steps:
     - task: Docker@2
       displayName: Build and push an image to container registry
@@ -55,7 +57,8 @@ stages:
     condition: and(succeeded(), not(startsWith(variables['Build.SourceBranch'], 'refs/pull/')))
     displayName: Deploy
     pool:
-      vmImage: $(vmImageName)
+      #vmImage: $(vmImageName)
+      name: $(agentPoolName)
     environment: 'gitjemontielhpipelinesjavascriptdocker.default'
     strategy:
       runOnce:
@@ -84,7 +87,8 @@ stages:
     displayName: Deploy Pull request
     condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/pull/'))
     pool:
-      vmImage: $(vmImageName)
+      #vmImage: $(vmImageName)
+      name: $(agentPoolName)
 
     environment: 'gitjemontielhpipelinesjavascriptdocker.$(k8sNamespaceForPR)'
     strategy:
